--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <main>
         <section>
             <h2>محصولات ما</h2>
-            <p>بگ سایز ۴۵×۴۵ آبی کاربنی با چاپ نقره‌ای</p>
+            <p>تولید و عرضه انواع بگ هایه فروشگاهی
+     با تنوع و رنگ های مختلف با چاپ اختصاصی لوگو</p>
         </section>
         <section>
             <h2>تماس با ما</h2>
