--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <h2>تماس با ما</h2>
             <p>آدرس: تهران، خیابان مولوی، ساختمان اطلس، واحد ۵</p>
-            <p>شماره تماس: ۰۹۲۳۲۹۰۱۷۰۱ (خانم رحمتی)</p>
+            <p>شماره تماس: ۰۹۱۰۶۸۲۱۷۰۰(آقای نوروزی)</p>
         </section>
     </main>
     <footer>
