--- a/index.html
+++ b/index.html
@@ -1,30 +1,70 @@
 
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>اعیان بگ</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>شرکت اعیان بگ</title>
+    <style>
+        body {
+            font-family: Tahoma, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 0;
+            margin: 0;
+            line-height: 1.8;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 5px 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .contact-info {
+            color: #ddd;
+            font-size: 14px;
+        }
+        section {
+            background-color: #fff;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 800px;
+            margin: 30px auto;
+        }
+        h1, h2 {
+            color: #222;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>به وب‌سایت رسمی اعیان بگ خوش آمدید</h1>
-        <p>تولید و عرضه انواع بگ فروشگاهی</p>
+        <h1>به وب‌سایت رسمی شرکت اعیان بگ خوش آمدید</h1>
     </header>
-    <main>
-        <section>
-            <h2>محصولات ما</h2>
-            <p>تولید و عرضه انواع بگ هایه فروشگاهی
-     با تنوع و رنگ های مختلف با چاپ اختصاصی لوگو</p>
-        </section>
-        <section>
-            <h2>تماس با ما</h2>
-            <p>آدرس: تهران، خیابان مولوی، ساختمان اطلس، واحد ۵</p>
-            <p>شماره تماس: ۰۹۱۰۶۸۲۱۷۰۰(آقای نوروزی)</p>
-        </section>
-    </main>
-    <footer>
-        <p>کلیه حقوق متعلق به اعیان بگ است</p>
-    </footer>
+    <nav>
+        <a href="index.html">خانه</a>
+        <a href="contact.html">تماس با ما</a>
+        <div class="contact-info">مشاور سفارش: آقای نوروزی - ۰۹۱۰۶۸۲۱۷۰۰</div>
+    </nav>
+    <section>
+        <h2>محصولات ما</h2>
+        <p>تولید و عرضه انواع بگ‌های فروشگاهی در سایز و رنگ‌های مختلف با چاپ اختصاصی لوگو به‌صورت دلخواه و حرفه‌ای.</p>
+    </section>
 </body>
 </html>
