--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@
     </header>
     <section>
         <p><strong>آدرس:</strong> تهران، خیابان مولوی، ساختمان اطلس، واحد ۵</p>
-        <p><strong>شماره مشاوره:</strong> ۰۹۲۳۲۹۰۱۷۰۱ (خانم رحمتی)</p>
-        <p><strong>ایمیل:</strong> info@ayanbag.ir</p>
+        <p><strong>شماره مشاوره:</strong> ۰۹۱۰۶۸۲۱۷۰۰ (آقای نوروزی)</p>
+        <p><strong>ایمیل:</strong> ayan_bag1234@gmail.com</p>
         <p><strong>ساعات پاسخگویی:</strong> شنبه تا پنج‌شنبه - ۹ صبح تا ۵ عصر</p>
     </section>
 </body>
